tests/semantic_errors/contract_logic_error.ind
func test(x)
    given x + 10  // Error: This is a number, not a boolean comparison
{
    return x;
}